Committing latest changes/updates to:
assets/scripts/app.js
assets/scripts/auth/api.js
assets/scripts/auth/events.js
assets/scripts/auth/ui.js
assets/scripts/likes/api.js
assets/scripts/likes/events.js
assets/scripts/likes/ui.js
assets/scripts/user/api.js
assets/scripts/user/events.js
assets/styles/index.scss
index.html

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -76,9 +76,10 @@ $black: #000;
   margin-right: 25px;
 }
 
-// #show-user-likes {
-//  margin-left: 25px
-// }
+#show-user-likes {
+  margin-left: 30px;
+  margin-right: 25px
+ }
 
 #likes-form {
   margin-left: 30px;
@@ -91,6 +92,12 @@ $black: #000;
 }
 
 #user-profile-info {
+  margin-left: 40px;
+  margin-right: 60px;
+  text-align: center;
+}
+
+#user-likes-info {
   margin-left: 40px;
   margin-right: 60px;
   text-align: center;
