Committing post MVP changes (in-progress) to UI/UX

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,48 +23,49 @@ $black: #000;
   }
 }
 
-// .button {
-//   margin: 20px;
-//   padding: 20px;
-//   height: auto;
-//   width: 300px;
-//   display: inline-block;
-//   justify-content: space-between;
-//
-// }
-// #create-user {
-//   font-size: 25px;
-//   color: purple;
-//   background-color: #2196F3;
-//   margin-right: 25px;
-//   margin-left: 40px;
-//
-// }
-//
-// #update-user {
-//   font-size: 25px;
-//   color: purple;
-//   background-color: #2196F3;
-//   margin-left: 25px;
-//   marign-right: 25px;
-//
-// }
-//
-// #user-info {
-//   font-size: 25px;
-//   color: purple;
-//   background-color: #2196F3;
-//   margin-right: 25px;
-//   margin-left: 25px;
-// }
-//
-// #delete-user {
-//   font-size: 25px;
-//   color: purple;
-//   background-color: #2196F3;
-//   margin-right: 25px;
-//   margin-left: 25px;
-// }
+.button {
+  margin: 20px;
+  padding: 20px;
+  height: auto;
+  width: 300px;
+  display: inline-block;
+  justify-content: space-between;
+
+}
+
+#create-user {
+  font-size: 20px;
+  color: purple;
+  background-color: #2196F3;
+  margin-right: 25px;
+  margin-left: 40px;
+
+}
+
+#update-user {
+  font-size: 20px;
+  color: purple;
+  background-color: #2196F3;
+  margin-left: 25px;
+  marign-right: 25px;
+
+}
+
+#user-info {
+  font-size: 20px;
+  color: purple;
+  background-color: #2196F3;
+  margin-right: 25px;
+  margin-left: 25px;
+}
+
+#delete-user {
+  font-size: 20px;
+  color: purple;
+  background-color: #2196F3;
+  margin-right: 25px;
+  margin-left: 25px;
+}
 
 #create-profile-form {
   margin-left: 30px;
